--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "next-blog",
   "version": "0.1.0",
+  "description": "Sheng's portfolio and blog",
+  "author": {
+    "name": "Sheng Zhuang",
+    "email": "shengzh9@gmail.com"
+  },
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,8 +13,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "gray-matter": "^4.0.2",
     "next": "10.0.0",
+    "raw-loader": "^4.0.2",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-markdown": "^5.0.2"
   }
 }
