--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "deploy": "rm -rf node_modules/.cache && next build && next export && touch out/.nojekyll && git add out/ && git commit -m \"Deploy Next.js to gh-pages\" && git subtree push --prefix out origin gh-pages"
+    "build": "next build && next export",
+    "start": "next start"
   },
   "dependencies": {
     "gray-matter": "^4.0.2",
