--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   "dependencies": {
     "gray-matter": "^4.0.2",
     "next": "10.0.0",
+    "prism": "^4.1.2",
+    "prop-types": "^15.7.2",
     "raw-loader": "^4.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-markdown": "^5.0.2"
+    "react-markdown": "^5.0.2",
+    "react-syntax-highlighter": "^15.4.3"
   }
 }
