--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build && next export",
-    "start": "next start"
+    "start": "next start",
+    "build:css": "postcss styles/tailwind.css -o styles/main.css",
+    "watch:css": "postcss styles/tailwind.css -o styles/main.css"
   },
   "dependencies": {
     "gray-matter": "^4.0.2",
@@ -22,5 +24,10 @@
     "react-dom": "17.0.1",
     "react-markdown": "^5.0.2",
     "react-syntax-highlighter": "^15.4.3"
+  },
+  "devDependencies": {
+    "postcss": "^8.2.8",
+    "postcss-preset-env": "^6.7.0",
+    "tailwindcss": "^2.0.3"
   }
 }
