--- a/package.json
+++ b/package.json
@@ -23,11 +23,17 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-markdown": "^5.0.2",
-    "react-syntax-highlighter": "^15.4.3"
+    "react-syntax-highlighter": "^15.4.3",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
+    "file-loader": "^6.2.0",
     "postcss": "^8.2.8",
     "postcss-preset-env": "^6.7.0",
-    "tailwindcss": "^2.0.3"
+    "tailwindcss": "^2.0.3",
+    "url-loader": "^4.1.1"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
